Apply final modernization improvements to repository classes
- **Simplified Redis boolean checks**: Remove redundant Boolean.TRUE.equals()
- **Modern stream operations**: Replace collect(Collectors.toList()) with toList()
- **Enhanced null safety**: Use Objects::nonNull instead of explicit null checks
- **Type inference**: Apply var for local variables in repository methods
- **Import optimization**: Remove unused imports and use modern alternatives

These changes complete the Java 24 modernization effort across all repository
and cache utility classes.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>