@@ -1,9 +1,8 @@
 package com.example.demo.infra.repository;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Repository;
@@ -30,8 +29,8 @@ public class RedisProductRepository implements ProductRepository {
 
     @Override
     public Optional<Product> findById(ProductId productId) {
-        String key = KEY_PREFIX + productId.value();
-        Object value = redisTemplate.opsForValue().get(key);
+        var key = KEY_PREFIX + productId.value();
+        var value = redisTemplate.opsForValue().get(key);
         return Optional.ofNullable((Product) value);
     }
 
@@ -39,36 +38,33 @@ public class RedisProductRepository implements ProductRepository {
     public List<Product> findByCategory(String categoryId) {
         return findAll().stream()
                 .filter(product -> product.getCategory().id().equals(categoryId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Product> findAll() {
-        Set<String> keys = redisTemplate.keys(KEY_PREFIX + "*");
-        if (keys == null) {
-            return List.of();
-        }
+        var keys = redisTemplate.keys(KEY_PREFIX + "*");
 
         return keys.stream()
                 .map(key -> (Product) redisTemplate.opsForValue().get(key))
-                .filter(product -> product != null)
-                .collect(Collectors.toList());
+                .filter(Objects::nonNull)
+                .toList();
     }
 
     @Override
     public void deleteById(ProductId productId) {
-        String key = KEY_PREFIX + productId.value();
+        var key = KEY_PREFIX + productId.value();
         redisTemplate.delete(key);
     }
 
     @Override
     public boolean existsById(ProductId productId) {
-        String key = KEY_PREFIX + productId.value();
-        return Boolean.TRUE.equals(redisTemplate.hasKey(key));
+        var key = KEY_PREFIX + productId.value();
+        return redisTemplate.hasKey(key);
     }
 
     @Override
     public List<Product> findActiveProducts() {
-        return findAll().stream().filter(Product::isActive).collect(Collectors.toList());
+        return findAll().stream().filter(Product::isActive).toList();
     }
 }
